Correction d'un attribut erroné overflow
Qui empêchait de faire défiler la page.

--- a/css/mescss/layout.css
+++ b/css/mescss/layout.css
@@ -2,7 +2,6 @@ html, body {
     max-width: 100%;
     height: 100%;
     scroll-behavior: smooth;
-    overflow: hidden;
 }
 
 .nav-bar {
